<resources>
    <string name="app_name">BookxpertAssignment</string>
    <string name="update_account">Update Account</string>
    <string name="delete_account">Delete Account</string>
    <string name="id">ID :</string>
    <string name="name">Name :</string>
    <string name="account_details">Account Details</string>
    <string name="all_accounts">All Accounts</string>
    <string name="account_name">Account Name</string>
    <string name="alternate_name">Alternate Name</string>
    <string name="yes">Yes</string>
    <string name="delete_warning">Are you sure you want to delete this account?</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="go_to_setting">Go to Settings</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="internet_warn_message">Please turn on Mobile Data or Wi-Fi to continue.</string>
    <string name="no_account_available">No Account Available\n</string>

</resources>