<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    card_view:cardCornerRadius="12dp"
    card_view:cardElevation="4dp"
    android:layout_marginTop="8dp"
    android:layout_marginHorizontal="10dp"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account_details"
                android:textSize="14sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:textColor="@color/black" />

            <ImageView
                android:id="@+id/updateIV"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/baseline_edit_24"
                android:padding="4dp"
                android:contentDescription="@string/update_account"
                />

            <ImageView
                android:id="@+id/deleteIV"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:src="@drawable/baseline_delete_24"
                android:padding="4dp"
                android:contentDescription="@string/delete_account"
                android:layout_marginStart="8dp" />
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/id"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/accountIdTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:textSize="14sp"
                    />
                <TextView
                    android:id="@+id/accountNameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    />
            </LinearLayout>


        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
