<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/noAccountAvailableTV"
        android:text="@string/no_account_available"
        android:textColor="@color/black"
        android:gravity="center"
        android:visibility="gone"
        android:textSize="18sp"
        android:textStyle="bold"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/all_accounts"
            android:textColor="@color/purple_700"
            android:layout_weight="1"
            android:layout_gravity="center|bottom"
            android:textSize="18sp"
            android:layout_marginStart="10dp"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/pdfIV"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/baseline_picture_as_pdf_24"
            android:padding="4dp"
            android:tint="@color/purple_700"
            android:contentDescription="@string/update_account"
            />
        <ImageView
            android:id="@+id/galleryIV"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/baseline_image_24"
            android:padding="4dp"
            android:tint="@color/purple_700"
            android:contentDescription="@string/update_account"
            />
        <ImageView
            android:id="@+id/cameraIV"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:src="@drawable/baseline_camera_24"
            android:padding="4dp"
            android:tint="@color/purple_700"
            android:layout_marginEnd="5dp"
            android:contentDescription="@string/update_account"
            />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/accountsRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout_margin="16dp" />
</LinearLayout>
